# financial-app

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  alembic.ini  docker-compose.observability.yml  mypi.ini  pyproject.toml
.github/workflows/: ci.yml
backend/: debug_test.py
backend/app/: main.py
backend/app/ai/anomaly/: __init__.py  autoencoder_detector.py  isolation_forest_detector.py
backend/app/ai/classifiers/: __init__.py  ml_classifier.py
backend/app/ai/features/: feature_extractor.py
backend/app/ai/predictors/: __init__.py  expense_predictor.py
backend/app/ai/recommendations/: __init__.py  engine.py  explainer.py  habit_analyzer.py  risk_assessor.py  savings_optimizer.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/application/accounts/: create_account.py  delete_account.py  get_account.py  get_account_summary.py  list_accounts.py  update_account.py
backend/app/application/ai/: analyze_habits.py  assess_risks.py  classify_batch.py  classify_transaction.py  detect_anomalies.py  get_classifier_status.py  get_dashboard.py  get_habit_trends.py  get_health_score.py  get_personalized_explanation.py  get_recommendations.py  optimize_savings.py  predict_expenses.py  predict_income.py  simulate_savings.py  train_classifier.py  train_predictor.py
backend/app/application/analytics/: __init__.py  get_cash_flow.py  get_cash_flow_by_account.py  get_category_breakdown.py  get_dashboard.py  get_income_trend.py  get_monthly_kpis.py  get_net_worth.py  get_portfolio_kpis.py  get_spending_heatmap.py  get_spending_trend.py  get_top_categories.py
backend/app/application/auth/: __init__.py  disable_mfa.py  enable_mfa.py  get_current_user.py  login_user.py  logout_user.py  refresh_token.py  register_user.py  request_email_verification.py  request_password_reset.py  reset_password.py  verify_email.py
backend/app/application/automations/: __init__.py  create_rule.py  delete_rule.py  evaluate_all.py  execute_rule.py  get_execution_logs.py  get_rule.py  get_summary.py  get_templates.py  list_rules.py  quick_balance_transfer.py  quick_card_payment.py  quick_savings_transfer.py  toggle_rule.py  update_rule.py
backend/app/application/budgets/: __init__.py  auto_adjust_budget.py  create_budget.py  delete_budget.py  dismiss_alert.py  get_budget.py  get_budget_summary.py  list_alerts.py  list_budgets.py  mark_alert_read.py  refresh_budget.py  update_budget.py
backend/app/application/cards/: check_card_alerts.py  create_spending_limit.py  delete_card.py  delete_card_bill.py  delete_spending_limit.py  dismiss_card_alert.py  generate_statement.py  get_card.py  get_cards_summary.py  get_spending_by_category.py  get_utilization_history.py  list_card_alerts.py  list_spending_limits.py  mark_card_alert_read.py  pay_card_bill.py  update_card.py  update_card_bill.py  update_spending_limit.py
backend/app/application/categories/: categorize_transaction.py  create_category.py  create_subcategory.py  delete_category.py  delete_subcategory.py  get_category.py  get_category_stats.py  list_categories.py  update_category.py  update_subcategory.py
backend/app/application/expenses/: __init__.py  analyze_subscriptions.py  auto_categorize.py  create_card.py  create_card_bill.py  create_expense.py  create_expense_bulk.py  create_expense_split.py  create_from_template.py  create_service.py  (+24 more)
backend/app/audit/: __init__.py  service.py
backend/app/automation/: __init__.py  actions.py  engine.py  triggers.py
backend/app/core/: config.py
backend/app/integrations/: __init__.py  calendar_handler.py  csv_handler.py  excel_handler.py  financial_api_client.py  import_processor.py  pdf_generator.py
backend/app/middleware/: error_handler.py  request_logger.py
backend/app/notifications/: __init__.py  service.py
backend/app/security/: __init__.py  permissions.py
backend/migrations/: env.py
backend/migrations/versions/: 0734b2400886_add_incomes_tables.py  28e8f29983b9_add_user_profiles_and_preferences.py  2cd01c1c674b_add_auth_tables.py  414b44a94f2c_add_loan_tables.py  56f13aaab89f_add_automation_tables.py  5fbda53170bf_add_budgets_tables.py  663e62c216eb_add_card_limits_alerts_and_credit_card_.py  6a2da3f1440a_add_ai_prediction_and_model_registry.py  6a40f8aada96_create_users_table.py  6ced7844f45c_add_financial_goals_tables.py  a67553199485_add_transactions.py  b80f52834e0c_add_wallets.py  c3b3599f1acd_add_financial_accounts.py  ccc65562e43f_add_import_job_table.py  dd8e74a5cb24_add_rbac_and_audit_tables.py  f19c7a0fa9cf_add_categories.py  ffb27bee88cf_add_notification_tables.py
config/: prometheus.yml
scripts/: create_test_db.py  test_phase10.ps1  test_phase11.ps1  test_phase12.ps1  test_phase13.ps1  test_phase14.ps1  test_phase15.ps1  test_phase16.ps1  test_phase17.ps1  test_phase18.ps1  test_phase19.ps1  test_phase20.ps1  test_phase9.ps1
tests/: conftest.py
tests/api/v1/: test_health.py
tests/integrations/: __init__.py  test_calendar_handler.py  test_csv_handler.py  test_financial_api.py  test_pdf_generator.py
tests/unit/ai/: test_explainer.py  test_habit_analyzer.py  test_savings_optimizer.py
tests/unit/domain/: test_account_value_objects.py  test_ai_value_objects.py  test_analytics_value_objects.py  test_budget_value_objects.py  test_card_value_objects.py  test_category_value_objects.py  test_engine_recommends_value_objects.py  test_feature_extractor.py  test_goal_value_objects.py  test_income_value_objects.py  test_loan_value_objects.py  test_money.py  test_transaction_value_objects.py  test_value_objects.py  test_wallet_value_objects.py
tests/unit/security/: test_jwt.py  test_password.py
(+282 files in other folders)
