[project]
name = "financial-intelligence-platform"
version = "0.1.0"
description = "Enterprise grade Personal Financial Intelligence Platform"
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
authors = [
    { name = "FIP Team" }
]
keywords = ["finance", "fintech", "ai", "fastapi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.13",
    "Framework :: FastAPI",
]

# ===========================================
# DEPENDENCIAS DE PRODUCCION
# ===========================================
dependencies = [
    # Framework
    "fastapi[standard] >= 0.115.0,<1.0",
    "uvicorn[standard] >= 0.30.0",
    # Database
    "sqlalchemy[asyncio] >= 2.0,<3.0",
    "asyncpg >= 0.30.0",
    "alembic >= 1.14,<2.0",
    # Cache
    "redis[hiredis] >= 5.0,<6.0",
    # Validation
    "pydantic >= 2.0,<3.0",
    "pydantic-settings >= 2.0,<3.0",
    # Security
    "python-jose[cryptography] >= 3.2",

    "python-multipart >= 0.0.9",
    # HTTP Client (para APIs externas)
    "httpx >= 0.27",
    # Sctructured Logging
    "structlog >= 24.0",
    # Monitoring
    "prometheus-client >= 0.21",
    "prometheus-fastapi-instrumentator >= 7.0",
    # OpenTelemetry
    "opentelemetry-api >= 1.28",
    "opentelemetry-sdk >= 1.28",
    "opentelemetry-instrumentation-fastapi >= 0.49",
    "opentelemetry-instrumentation-sqlalchemy >= 0.49",
    "opentelemetry-instrumentation-redis >= 0.49",
    "opentelemetry-exporter-otlp-proto-grpc >= 1.28",
    "opentelemetry-exporter-prometheus >= 0.49",
    # Sentry
    "sentry-sdk[fastapi] >= 2.0",
    # Utils
    "python-dateutil >= 2.9",
    # Auth
    "authlib >= 1.3",
    "aiosmtplib>=3.0",
    "jinja2>=3.1",
    "pyotp>=2.9",
    "qrcode[pil]>=7.4",
    "bcrypt>=4.0",
    "ruff>=0.15.22",
    "mypy>=2.3.0",
    "scikit-learn >= 1.5",
    "xgboost >= 2.1",
    "lightgbm >= 4.5",
    "torch >= 2.4",
    "pandas >= 2.2",
    "numpy >= 1.26",
    "joblib >= 1.4",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "pytest-xdist>=3.5",
    "factory-boy>=3.3",
    "httpx>=0.27",

    # Linting & Formatting
    "ruff>=0.8.0",

    # Type Checking
    "mypy>=1.13",
    "sqlalchemy[mypy]>=2.0",

    # Pre-commit
    "pre-commit>=4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["backend/app"]

# ═══════════════════════════════════════════
# BUILD SYSTEM
# ═══════════════════════════════════════════
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]

# ═══════════════════════════════════════════
# RUFF CONFIGURATION
# ═══════════════════════════════════════════
[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "A",      # flake8-builtins
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "DJ",     # flake8-django
    "UP",     # pyupgrade
    "S",      # flake8-bandit (security)
    "T20",    # flake8-print
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "S101",   # assert used (needed in tests)
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

# ═══════════════════════════════════════════
# MYPY CONFIGURATION
# ═══════════════════════════════════════════
[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
pretty = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
ignore_errors = true

# ═══════════════════════════════════════════
# PYTEST CONFIGURATION
# ═══════════════════════════════════════════
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_test_loop_scope = "session"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
    "-x",                # Stop on first failure (quitcar en CI)
]
markers = [
    "unit: Unit tests (fast, no dependencies)",
    "integration: Integration tests (need database/redis)",
    "api: API tests (HTTP requests)",
    "security: Security tests",
    "slow: Slow tests",
]

# ═══════════════════════════════════════════
# PYTEST-COV CONFIGURATION
# ═══════════════════════════════════════════
[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
precision = 2
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
    "raise NotImplementedError",
]

# ═══════════════════════════════════════════
# ALEMBIC CONFIGURATION (referencia)
# ═══════════════════════════════════════════
# alembic.ini se gestiona aparte
